@@ -290,3 +290,4 @@
 ::msgcat::mcset fr "Add elapsed game time" "Ajouter temps écoulé"
 ::msgcat::mcset fr "Human" "Humain"
 ::msgcat::mcset fr "Online TB" "Finales en ligne"
+::msgcat::mcset fr "Undo" "Annuler"
